# audit-agent-ui

./: .replit  ARCHITECTURE_MIGRATION_SUMMARY.md  README.md  README_SEPARATE_SERVERS.md  STATIC_API_README.md  create_realistic_excel.py  database_ddl.sql  database_dml.sql  followup_audit_questions.xlsx  package-lock.json  package.json  pyproject.toml  python-dependencies.txt  python_langchain_service.py  python_server.py  realistic_audit_questions.xlsx  replit.md  sample_audit_questions.xlsx  simple_python_server.py  start.py  start_dev_servers.sh  start_hybrid_backend.sh  start_langchain_service.sh  start_python_backend.py  start_python_server.py  test_create_sample_excel.py  vite.dev.config.js
attached_assets/: Assistant-Bot_1752717553723.lottie  Assistant-Bot_1752720965792.webm
client/public/api/: applications.json  health.json
client/public/api/applications/: 1.json
client/public/api/data-collection/: start.json
client/public/api/questions/: analyze.json
client/src/: App.tsx  index.css
client/src/components/ui/: alert-dialog.tsx  calendar.tsx  carousel.tsx  sidebar.tsx  toggle-group.tsx
client/src/components/wizard/: navigation.tsx  progress-bar.tsx  step-five.tsx  (+4 more)
client/src/lib/: queryClient.ts
client/src/pages/: dashboard.tsx  settings.tsx  wizard.tsx
public/api/: data-requests.json
public/api/applications/: 2.json  3.json
public/api/data-requests/: 1.json
server/: __init__.py  database.py  flask_api.py  index.ts  langchain_service.py  main.py  routes.py  routes.ts  run_python.py  start_flask.py  storage.py  storage.ts
shared/: schema.ts
(+2 files in other folders)
